# CodingAgentPlayground

./: README.md
Claude/Kanban/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md
Claude/Kanban/backend/: AGENTS.md  pyproject.toml
Claude/Kanban/backend/app/: ai.py  board.py  db.py  main.py
Claude/Kanban/backend/tests/: test_ai.py  test_auth.py  test_board.py  test_chat.py  test_health.py
Claude/NorthwindWinForms/: .gitignore  AGENTS.md  App.config  DbHelper.cs  DbOrder.cs  Form0.Designer.cs  Form0.cs  Form1.Designer.cs  Form1.cs  NorthwindWinForms.csproj  NorthwindWinForms.slnx  Program.cs  README.md  SPEC1.md
Copilot/Kanban/: .dockerignore  README.md
Copilot/Kanban/backend/: AGENTS.md  Dockerfile  pyproject.toml
Copilot/Kanban/backend/app/: ai.py  board.py  db.py  main.py
Copilot/Kanban/backend/app/static/: .gitignore
Copilot/Kanban/backend/tests/: test_ai.py  test_auth.py  test_board.py  test_health.py
Copilot/NorthwindWebForms/: .gitignore  DbHelper.cs  Form0.aspx  Form0.aspx.cs  Form1.aspx  HISTORY.md  WebApplication1.csproj  WebApplication1.slnx  packages.config
Copilot/NorthwindWinForms/: App.config  DbHelper.cs  DbOrder.cs  Form0.Designer.cs  Form1.cs  HISTORY.md  PLAN1.md  WindowsFormsApp1.slnx
Cursor/FPS/: README.md  index.html
Cursor/Kanban/: .gitignore  README.md
GHC/NorthwindWebForms/: AGENTS.md  DbOrder.cs  Form0.aspx.designer.cs  Form1.aspx.cs  Form1.aspx.designer.cs  PLAN1.md  README.md  Site.Master  Site.Master.designer.cs  Web.config
GHC/NorthwindWinForms/: Form0.cs  Form1.Designer.cs  WindowsFormsApp1.csproj
(+76 files in other folders)
