[project]
name = "backend"
version = "0.1.0"
description = "Project Management MVP backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "itsdangerous",
    "openai",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
